refactor(core):优化日报生成与AI润色功能
- 简化EDT线程调用逻辑
- 添加ZhipuUtil私有构造函数防止实例化
- 使用Collections.singletonList替代Arrays.asList提高性能-优化AI返回结果解析逻辑
- 调整插件菜单项文本描述以增强用户体验